force-app/main/default/objects/Observation__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vital Signs</fullName>
            </value>
            <value>
                <fullName>Laboratory</fullName>
            </value>
            <value>
                <fullName>Imaging</fullName>
            </value>
            <value>
                <fullName>Social History</fullName>
            </value>
            <value>
                <fullName>Survey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>