force-app/main/default/objects/Observation__c/fields/DiagnosticReport__c.field-meta.xml
<CustomField>
    <fullName>DiagnosticReport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Diagnostic Report</label>
    <referenceTo>DiagnosticReport__c</referenceTo>
    <relationshipLabel>Observations</relationshipLabel>
    <relationshipName>Observations</relationshipName>
    <type>Lookup</type>
</CustomField>