force-app/main/default/objects/Observation__c/fields/Interpretation__c.field-meta.xml
<CustomField>
    <fullName>Interpretation__c</fullName>
    <label>Interpretation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>Abnormal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>