force-app/main/default/objects/Observation__c/fields/Observation_Code__c.field-meta.xml
<CustomField>
    <fullName>Observation_Code__c</fullName>
    <label>Observation Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>