force-app/main/default/objects/Observation__c/fields/Observation_Code_System__c.field-meta.xml
<CustomField>
    <fullName>Observation_Code_System__c</fullName>
    <description>Default code system for observations is LOINC. Global value set defaults are package-wide, so LOINC is not marked default on LogicEMR_Code_System.</description>
    <label>Observation Code System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LogicEMR_Code_System</valueSetName>
    </valueSet>
</CustomField>