force-app/main/default/objects/Observation__c/fields/Observation_Display__c.field-meta.xml
<CustomField>
    <fullName>Observation_Display__c</fullName>
    <label>Observation Display</label>
    <length>255</length>
    <type>Text</type>
</CustomField>