force-app/main/default/objects/Observation__c/fields/Observation_Ref__c.field-meta.xml
<CustomField>
    <fullName>Observation_Ref__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Canonical Code Reference. Observation_Display__c and Observation_Code__c remain snapshot fields populated at selection.</description>
    <label>Observation Code</label>
    <referenceTo>Code_Reference__c</referenceTo>
    <relationshipLabel>Observations</relationshipLabel>
    <relationshipName>Observations</relationshipName>
    <type>Lookup</type>
</CustomField>