force-app/main/default/objects/Observation__c/fields/Reference_Range_High__c.field-meta.xml
<CustomField>
    <fullName>Reference_Range_High__c</fullName>
    <label>Reference Range High</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>