force-app/main/default/objects/Observation__c/fields/Value_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Value_Quantity__c</fullName>
    <label>Value Quantity</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>