force-app/main/default/objects/Observation__c/fields/Value_String__c.field-meta.xml
<CustomField>
    <fullName>Value_String__c</fullName>
    <label>Value String</label>
    <length>255</length>
    <type>Text</type>
</CustomField>