force-app/main/default/objects/Observation__c/fields/Value_Unit__c.field-meta.xml
<CustomField>
    <fullName>Value_Unit__c</fullName>
    <label>Value Unit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>