force-app/main/default/objects/Observation__c/listViews/All_Observations.listView-meta.xml
<ListView>
    <fullName>All_Observations</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Observation_Display__c</columns>
    <columns>Category__c</columns>
    <columns>Status__c</columns>
    <columns>Value_Quantity__c</columns>
    <columns>Value_Unit__c</columns>
    <columns>Effective_DateTime__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Observations</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>