force-app/main/default/objects/Observation__c/listViews/Vital_Signs.listView-meta.xml
<ListView>
    <fullName>Vital_Signs</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Observation_Display__c</columns>
    <columns>Category__c</columns>
    <columns>Status__c</columns>
    <columns>Value_Quantity__c</columns>
    <columns>Value_Unit__c</columns>
    <columns>Effective_DateTime__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Vital Signs</value>
    </filters>
    <label>Vital Signs</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>